--- a/scripts/099_top_10_in_sweets__code_for_Figure_S7.Rmd
+++ b/scripts/099_top_10_in_sweets__code_for_Figure_S7.Rmd
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "Top 10 eaten foods of the sweets group"
 output: html_document
 ---
 
@@ -99,7 +99,7 @@ plot_eff
 ```{r}
 title <- ggdraw() + 
   draw_label(
-    "Fig. S7",
+    "Fig. S6",
     fontface = 'bold',
     x = 0,
     hjust = 0
@@ -109,7 +109,6 @@ title <- ggdraw() +
   )
   
 
-
 combined <- plot_grid(
   title, plot_eff,
   ncol = 1,
@@ -117,7 +116,7 @@ combined <- plot_grid(
   rel_heights = c(0.1, 1)
 )+theme(plot.margin = unit(c(1,3,6,1), "cm"))
  
-ggsave('../data/S7_top10_eaten_foods_of_sweets_099.pdf',  width = 210, height = 297, units = "mm", device = 'pdf', plot = combined, dpi = 300)
+ggsave('../results//S06_top10_eaten_foods_of_sweets_099.pdf',  width = 210, height = 297, units = "mm", device = 'pdf', plot = combined, dpi = 300)
 
 ```
 
